# advent-of-code-2023

./: README.md  aoc.cabal
.devcontainer/: compose.yaml  devcontainer.json
source/executable/: Main.hs
